feat: Changed version to 1.8